<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_people_center"
            android:icon="@drawable/ic_mine"
            android:title="@string/people_center" />
        <item
            android:id="@+id/nav_trace_history"
            android:icon="@drawable/ic_trace"
            android:title="@string/trace_history" />
        <item
            android:id="@+id/nav_video_history"
            android:icon="@drawable/ic_menu_video_history"
            android:title="@string/video_history" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about" />
    </group>

</menu>
