<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/item_trace_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/item_trace_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                tools:text="光电园" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_htb_arrow_right" />

            <TextView
                android:id="@+id/item_trace_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                tools:text="互联网" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_time" />

            <TextView
                android:id="@+id/item_trace_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:textSize="14sp"
                tools:text="2018-07-01 12:00:00" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_trace_dis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/item_trace_operation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_trace_ad">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_distance"
                android:drawablePadding="4dp"
                android:drawableStart="@drawable/ic_distance"
                android:text="@string/distance"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/item_trace_distrance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                tools:text="5.0km" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_trace_operation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/item_trace_dis">

            <Button
                android:id="@+id/item_trace_animator_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:text="@string/trace_start_animator"
                android:textColor="#00d3f9"
                android:textSize="18sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#000" />

            <Button
                android:id="@+id/item_trace_video_looking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffffff"
                android:text="@string/video_looking"
                android:textColor="#00d3f9"
                android:textSize="18sp" />

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>